- Added Epic Fight compat (will be released as datapack, later maybe as mod that will fix some issues with abilities of modded weapons and maybe curios)
- Added Crypt Lantern
- Added Sake to Creative Tab
- Added Tomb variations
- Added Pyratite block and Crystal
- Added Silk touch drops to Crystals
- Added Goblin Model Configuration
- Added "in-hand" Models to Katanas (Contributed by Kerdo)

- Deleted Geodites (Drops moved to ephemarite)
- Deleted Void Crystal

- Changed Tipsy effect balance
- Drinks are placeable now
- Drinks are stackable up to 64 now
- Animated Goblins
- Buffed Katanas
- Reworked Goblins
- Decreased amount of bones dropped from Goblins
- Resprited all the drinks
- Updated to Forge 47.2.20

# Changelog v0.6.1
- Now Valoria requires Lodestone
- Various playability changes

- Added Custom Voxel shapes to some blocks
- Added some Recipes
- Added Firefly like particles, spawned in Shadeforest
- Added Particles for Bandages
- Added Shade Blossom
- Added Shade Blossom Bandage
- Added Pots Generation

- Reworked Stone Crusher (A bit)
- Reworked Accessories
- Reworked BlazeReap
- Reworked Bandages
- Decreased amount of bones dropped from Goblins

- ID change of "pick" -> "prospectors_pick"
- Changed spawnables in Valoria dimension

- Fixed Katana's, Scythe's
- Fixed Scythe Attributes
- Fixed infinite use of Katana
- Fixed Gloves rendering
- Fixed Void armor craft recipe

- Resprited Gazers, totems, winglets
- Resprited Bandages
- Resprited Effects

- Changed incompatibility of "Bleeding" enchantment from "Sweeping Edge" to "Sharpness"

- Optimized Gloves code
- Updated mods.toml

# Changelog v0.6

- Optimized Quicksand Fog Rendering
- Optimized CurioItemProperty
- Optimized Infernal Sword
- Optimized Scythe Items
- Optimized Lexicon Page Item
- Optimized Mannequin
- Optimized Weapons abilities

- Added functionality for ALL runes (finally did it lmao)
- Added Jade compat
- Added Compat for Enchantment Descriptions
- Added 2 attributes to Prospectors pick