@@ -1,0 +1,20 @@
+{
+  "variants": {
+    "facing=east": {
+      "model": "valoria:block/crypt_pot",
+      "y": 90
+    },
+    "facing=north": {
+      "model": "valoria:block/crypt_pot",
+      "y": 180
+    },
+    "facing=south": {
+      "model": "valoria:block/crypt_pot",
+      "y": 180
+    },
+    "facing=west": {
+      "model": "valoria:block/crypt_pot",
+      "y": 90
+    }
+  }
+}
