@@ -1,0 +1,45 @@
+{
+	"render_type": "minecraft:cutout",
+	"textures": {
+		"2": "valoria:block/crypt_pot",
+        "particle": "valoria:block/tombstone"
+    },
+	"elements": [
+		{
+			"from": [4, 0, 4],
+			"to": [12, 10, 12],
+			"faces": {
+				"north": {"uv": [0, 0, 4, 5], "texture": "#2"},
+				"east": {"uv": [0, 0, 4, 5], "texture": "#2"},
+				"south": {"uv": [0, 0, 4, 5], "texture": "#2"},
+				"west": {"uv": [0, 0, 4, 5], "texture": "#2"},
+				"up": {"uv": [8, 4, 4, 0], "texture": "#2"},
+				"down": {"uv": [4, 5, 0, 9], "texture": "#2"}
+			}
+		},
+		{
+			"from": [6, 10, 6],
+			"to": [10, 11, 10],
+			"faces": {
+				"north": {"uv": [4.5, 10.5, 5.5, 11], "texture": "#2"},
+				"east": {"uv": [4.5, 10.5, 5.5, 11], "texture": "#2"},
+				"south": {"uv": [4.5, 10.5, 5.5, 11], "texture": "#2"},
+				"west": {"uv": [4.5, 10.5, 5.5, 11], "texture": "#2"},
+				"up": {"uv": [5.5, 11, 4.5, 10.5], "texture": "#2"},
+				"down": {"uv": [5.5, 10.5, 4.5, 11], "texture": "#2"}
+			}
+		},
+		{
+			"from": [4, 11, 4],
+			"to": [12, 13, 12],
+			"faces": {
+				"north": {"uv": [0, 9, 4, 10], "texture": "#2"},
+				"east": {"uv": [0, 9, 4, 10], "texture": "#2"},
+				"south": {"uv": [0, 9, 4, 10], "texture": "#2"},
+				"west": {"uv": [0, 9, 4, 10], "texture": "#2"},
+				"up": {"uv": [8, 8, 4, 4], "texture": "#2"},
+				"down": {"uv": [8, 0, 4, 4], "texture": "#2"}
+			}
+		}
+	]
+}
